# rat-bot

./: Cargo.toml  README.md
src/: junk.rs  main.rs
src/controllers/: message_controller.rs  mod.rs
src/entities/: message_entity.rs  mod.rs
src/services/: message_service.rs  mod.rs
src/utils/: Memory.rs  Offsets.rs  Process.rs  mod.rs
