[package]
name = "rat-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
sysinfo = "0.30.11"
[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["processthreadsapi", "winuser", "tlhelp32", "stralign", "memoryapi"]}
serde = { version = "1.0", features = ["derive"] }